--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Cool Blocks" />
     <meta property="og:description" content="Bored in school, made some blocks." />
     <meta property="og:image" content="https://cqb13.me/Cool-Blocks/Logo.png" />
-    <link rel="icon" href="Logo.png" />
+    <link rel="icon" href="pizza.ico" />
     <link rel="stylesheet" href="css/style.css">
     <title>Cool Blocks</title>
 </head>
