Carpetas css js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Bored in school, made some blocks." />
     <meta property="og:image" content="https://cqb13.me/Cool-Blocks/Logo.png" />
     <link rel="icon" href="./img/pizza.ico" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./styleCss/style.css">
     <title>Cool Blocks</title>
 </head>
 <body>
@@ -43,5 +43,5 @@
         </div>
     </footer>
 </body>
-<script src="js/blockLayout.js"></script>
+<script src="scriptJs/blockLayout.js"></script>
 </html>
